Fixed contact me popup from overflowing on mobile

--- a/src/components/Collage/Collage.module.scss
+++ b/src/components/Collage/Collage.module.scss
@@ -18,5 +18,6 @@
     background-size: cover;
     margin-left: 5px;
     margin-right: 5px;
+    border-radius: 20px;
     animation: fadeIn ease 2s;
 }
